FIX: Header Logo Width on Mobile Device

--- a/css/header.css
+++ b/css/header.css
@@ -60,7 +60,7 @@
 }
 
 .website-logo {
-  width: 100%;
+  width: 90%;
 }
 
 .page-link {
